# EDISON_AI

backend/: langgraph.json  pyproject.toml  requirements.txt  transcript.txt
backend/edison_ai/: agent.py  app.py  schema.py
backend/edison_ai/models/: models.py
ui/app/: Main.tsx  globals.css  layout.tsx  page.tsx
ui/app/components/ui/: Quiz.tsx  TextDisplay.tsx
ui/app/lib/: types.ts
